--- a/index.html
+++ b/index.html
@@ -12,5 +12,5 @@
       <button onclick="add">加一</button>
     </div>
   </body>
-  <script type="module" src="./index.js"></script>
+  <script type="module" src="./main.js"></script>
 </html>
